implemented computation of region-wise pvalues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(GenoGAMDataSet)
 export(GenomicTiles)
 export(changeSettings)
 export(checkSettings)
+export(computeRegionSignificance)
 export(computeSignificance)
 export(computeSizeFactors)
 export(dataRange)
@@ -45,6 +46,7 @@ exportMethods(getOverhangSize)
 exportMethods(getTile)
 exportMethods(getTileNumber)
 exportMethods(getTileSize)
+exportMethods(rowRanges)
 exportMethods(sizeFactors)
 exportMethods(tileSettings)
 exportMethods(untile)
