added generic quality check function implemented quality checks for GenoGAMDataSet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(getTileSize)
 export(makeTestGenoGAM)
 export(makeTestGenoGAMDataSet)
 export(makeTestGenomicTiles)
+export(qualityCheck)
 export(tileSettings)
 export(untile)
 export(view)
