added documentation of filter function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(computeRegionSignificance)
 export(computeSignificance)
 export(computeSizeFactors)
 export(dataRange)
+export(filter)
 export(genogam)
 export(getChromosomes)
 export(getChunkIndex)
