--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(computeRegionSignificance)
 export(computeSignificance)
 export(computeSizeFactors)
 export(dataRange)
-export(filter)
+export(filterData)
 export(genogam)
 export(getChromosomes)
 export(getChunkIndex)
