--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(getTileSize)
 export(makeTestGenoGAM)
 export(makeTestGenoGAMDataSet)
 export(makeTestGenomicTiles)
+export(plot.GenoGAM)
 export(qualityCheck)
 export(tileSettings)
 export(untile)
@@ -36,6 +37,7 @@ exportMethods("design<-")
 exportMethods("sizeFactors<-")
 exportMethods(changeSettings)
 exportMethods(checkSettings)
+exportMethods(colData)
 exportMethods(dataRange)
 exportMethods(design)
 exportMethods(getChromosomes)
