--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export(GenoGAMDataSet)
 export(GenomicTiles)
+export(callPeaks)
 export(changeSettings)
 export(checkSettings)
 export(computeRegionSignificance)
 export(computeSignificance)
 export(computeSizeFactors)
 export(dataRange)
+export(filterData)
 export(genogam)
 export(getChromosomes)
 export(getChunkIndex)
@@ -23,6 +25,8 @@ export(getTileSize)
 export(makeTestGenoGAM)
 export(makeTestGenoGAMDataSet)
 export(makeTestGenomicTiles)
+export(plot.GenoGAM)
+export(qualityCheck)
 export(tileSettings)
 export(untile)
 export(view)
@@ -33,6 +37,7 @@ exportMethods("design<-")
 exportMethods("sizeFactors<-")
 exportMethods(changeSettings)
 exportMethods(checkSettings)
+exportMethods(colData)
 exportMethods(dataRange)
 exportMethods(design)
 exportMethods(getChromosomes)
