Fixed issues to pass all Bioconductor tests
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/GenoGAM@121489 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ exportMethods(tileSettings)
 exportMethods(untile)
 exportMethods(view)
 import(BiocParallel)
+import(Biostrings)
 import(DESeq2)
 import(GenomeInfoDb)
 import(GenomicAlignments)
