added writeToBEDFile function added more examples and extended the vignette
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/GenoGAM@121576 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(qualityCheck)
 export(tileSettings)
 export(untile)
 export(view)
+export(writeToBEDFile)
 exportClasses(GenoGAM)
 exportClasses(GenoGAMDataSet)
 exportClasses(GenomicTiles)
