--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: GenoGAM
 Type: Package
 Title: A GAM based framework for analysis of ChIP-Seq data
-Version: 1.1.0
+Version: 1.1.3
 Date: 2016-03-13
 Authors@R: c(person("Georg", "Stricker", role = c("aut", "cre"), email
         = "georg.stricker@in.tum.de"), person("Alexander",
@@ -43,6 +43,7 @@ Suggests:
     chipseq (>= 1.21.2),
     LSD (>= 3.0.0),
     genefilter (>= 1.54.2),
+    ggplot2 (>= 2.1.0),
     testthat,
     knitr
 VignetteBuilder: knitr
