fixed elementNROWS bug

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(qualityCheck)
 export(tileSettings)
 export(untile)
 export(view)
+export(writeToBEDFile)
 exportClasses(GenoGAM)
 exportClasses(GenoGAMDataSet)
 exportClasses(GenomicTiles)
@@ -57,6 +58,7 @@ exportMethods(tileSettings)
 exportMethods(untile)
 exportMethods(view)
 import(BiocParallel)
+import(Biostrings)
 import(DESeq2)
 import(GenomeInfoDb)
 import(GenomicAlignments)
