--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: GenoGAM
 Type: Package
 Title: A GAM based framework for analysis of ChIP-Seq data
-Version: 2.1.0
+Version: 2.1.1
 Date: 2018-10-25
 Authors@R: c(person("Georg", "Stricker", role = c("aut", "cre"), email
         = "georg.stricker@in.tum.de"), person("Alexander",
@@ -71,6 +71,7 @@ Collate:
     'GenoGAMDataSetList-class.R'
     'GenoGAMList-class.R'
     'GenoGAMSetup-class.R'
+    'RcppExports.R'
     'background.R'
     'broadPeaks.R'
     'cv.R'
