--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: GenoGAM
 Type: Package
 Title: A GAM based framework for analysis of ChIP-Seq data
-Version: 2.0.1
+Version: 2.0.2
 Date: 2018-10-25
 Authors@R: c(person("Georg", "Stricker", role = c("aut", "cre"), email
         = "georg.stricker@in.tum.de"), person("Alexander",
@@ -59,7 +59,7 @@ NeedsCompilation: no
 RoxygenNote: 6.1.0
 biocViews: Regression, DifferentialPeakCalling, ChIPSeq,
     DifferentialExpression, Genetics, Epigenetics, WholeGenome,
-    ChipOnChip
+    ChipOnChip, ImmunoOncology
 Collate: 
     'Coordinates-class.R'
     'GenoGAMFamily-class.R'
@@ -91,4 +91,4 @@ URL: https://github.com/gstricker/GenoGAM
 BugReports: https://github.com/gstricker/GenoGAM/issues
 Author: Georg Stricker [aut, cre], Alexander Engelhardt [aut], Julien
     Gagneur [aut]
-Maintainer: Georg Stricker <georg.stricker@in.tum.de>
+Maintainer: Georg Stricker <georg.stricker@protonmail.com>
